--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,7 @@
 version: '3'
 services:
 
-  api_call:
+  api_service:
     container_name : api_news
     build: 
       context: ./api_call
@@ -10,21 +10,26 @@ services:
     networks:
       - mynetwork
 
-  zookeeper:
+  zookeeper_service:
     image: wurstmeister/zookeeper
     container_name : zookeeper_news
+    platform: linux/amd64
     ports:
       - "2181:2181"
     networks:
-    - mynetwork
-  kafka:
+      - mynetwork
+      
+  kafka_service:
     container_name : kafka_news
     build:
       context: ./kafka_server
     ports:
       - "9092:9092"
     environment:
-      KAFKA_ADVERTISED_HOST_NAME: kafka
+      KAFKA_ADVERTISED_LISTENERS: INSIDE://kafka_service:9092,OUTSIDE://localhost:9094
+      KAFKA_LISTENER_SECURITY_PROTOCOL_MAP: INSIDE:PLAINTEXT,OUTSIDE:PLAINTEXT
+      KAFKA_LISTENERS: INSIDE://:9092,OUTSIDE://:9094
+      KAFKA_INTER_BROKER_LISTENER_NAME: INSIDE
       KAFKA_ZOOKEEPER_CONNECT: zookeeper:2181
     volumes:
       - /var/run/docker.sock:/var/run/docker.sock
@@ -34,5 +39,5 @@ services:
       - mynetwork
 
 networks:
-  mynetwork:
+  mynetwork: {}
   # 여기에 api_call, front 등 다른 서비스들을 추가
