--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,33 +11,44 @@ services:
       - mynetwork
 
   zookeeper_service:
-    image: wurstmeister/zookeeper
-    container_name : zookeeper_news
+    image: confluentinc/cp-zookeeper:latest
+    container_name : zookeeper_service
     platform: linux/amd64
+    environment:
+      ZOOKEEPER_SERVER_ID: 1
+      ZOOKEEPER_CLIENT_PORT: 2181
+      ZOOKEEPER_TICK_TIME: 2000
+      ZOOKEEPER_INIT_LIMIT: 5
+      ZOOKEEPER_SYNC_LIMIT: 2
     ports:
       - "2181:2181"
     networks:
       - mynetwork
       
   kafka_service:
-    container_name : kafka_news
+    container_name : kafka_service
     build:
       context: ./kafka_server
     ports:
-      - "9092:9092"
+      - "9094:9092"
+
     environment:
-      KAFKA_ADVERTISED_LISTENERS: INSIDE://kafka_service:9092,OUTSIDE://localhost:9094
-      KAFKA_LISTENER_SECURITY_PROTOCOL_MAP: INSIDE:PLAINTEXT,OUTSIDE:PLAINTEXT
-      KAFKA_LISTENERS: INSIDE://:9092,OUTSIDE://:9094
-      KAFKA_INTER_BROKER_LISTENER_NAME: INSIDE
-      KAFKA_ZOOKEEPER_CONNECT: zookeeper:2181
+      KAFKA_BROKER_ID: 1
+      KAFKA_ZOOKEEPER_CONNECT: 'zookeeper_service:2181'
+      KAFKA_ADVERTISED_LISTENERS: PLAINTEXT://kafka_service:9092,PLAINTEXT_HOST://localhost:9094
+      KAFKA_LISTENER_SECURITY_PROTOCOL_MAP: PLAINTEXT:PLAINTEXT,PLAINTEXT_HOST:PLAINTEXT
+      KAFKA_INTER_BROKER_LISTENER_NAME: PLAINTEXT
+      KAFKA_OFFSETS_TOPIC_REPLICATION_FACTOR: 1
+      KAFKA_GROUP_INITIAL_REBALANCE_DELAY_MS: 0
+  
     volumes:
       - /var/run/docker.sock:/var/run/docker.sock
       - ./kafka_server/kafka_init.sh:/kafka_init.sh
     command: ["/bin/sh", "-c", "/kafka_init.sh && start-kafka.sh"]
+    depends_on:
+      - zookeeper_service
     networks:
       - mynetwork
 
 networks:
   mynetwork: {}
-  # 여기에 api_call, front 등 다른 서비스들을 추가
