--- a/kafka_server/ server.properties
+++ b/kafka_server/ server.properties
@@ -2,13 +2,13 @@
 broker.id=0
 
 # 클라이언트 요청을 받을 주소와 포트 설정
-listeners=PLAINTEXT://kafka_service:9092
+advertised.listeners=PLAINTEXT://localhost:9092
 
 # Kafka 데이터를 저장할 디렉토리
 log.dirs=/tmp/kafka-logs
 
 # ZooKeeper 연결에 사용할 주소와 포트
-zookeeper.connect=zookeeper:2181
+zookeeper.connect=zookeeper_service:2181
 
 # ZooKeeper 세션 타임아웃
 zookeeper.connection.timeout.ms=6000
