--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -77,6 +77,7 @@ services:
       - MONGODB_COLLECTION=${MONGODB_COLLECTION}
     volumes:
     - ./mongodb_service/mongodb_data:/data/db
+  
   data_api_service:
     container_name: data_api_service
     build: ./data_api_service
@@ -94,9 +95,10 @@ services:
     build: ./frontend_service
     ports:
       - "3000:3000"
-  # FastAPI 서비스 정의
+    depends_on:
+      - data_api_service
     networks:
-    - mynetwork
+      - mynetwork
 
 networks:
   mynetwork: {}
