--- a/kafka_service/ server.properties
+++ b/kafka_service/ server.properties
@@ -1,6 +1,8 @@
 # 브로커 ID, 각 브로커는 클러스터 내에서 고유한 ID를 가져야 함
 broker.id=0
 
+auto.create.topics.enable=true
+
 # 클라이언트 요청을 받을 주소와 포트 설정
 advertised.listeners=PLAINTEXT://kafka_service:29092
 
