--- a/frontend_service/package.json
+++ b/frontend_service/package.json
@@ -1,41 +1,32 @@
 {
-    "name": "front_service",
-    "version": "1.0.0",
-    "private": true,
-    "dependencies": {
-      "axios": "^0.21.1",
-      "react": "^17.0.2",
-      "react-dom": "^17.0.2",
-      "react-router-dom": "^5.2.0",
-      "react-scripts": "4.0.3"
-    },
-    "devDependencies": {
-        "@babel/plugin-proposal-private-property-in-object": "^7.x.x"
-      },
-    "scripts": {
-      "start": "react-scripts start",
-      "build": "react-scripts build",
-      "test": "react-scripts test",
-      "eject": "react-scripts eject"
-    },
-    
-    "eslintConfig": {
-      "extends": [
-        "react-app",
-        "react-app/jest"
-      ]
-    },
-    "browserslist": {
-      "production": [
-        ">0.2%",
-        "not dead",
-        "not op_mini all"
-      ],
-      "development": [
-        "last 1 chrome version",
-        "last 1 firefox version",
-        "last 1 safari version"
-      ]
-    }
+  "name": "front_service",
+  "version": "1.0.0",
+  "private": true,
+  "dependencies": {
+    "axios": "^0.21.1",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
+    "react-router-dom": "^6.x", 
+    "react-scripts": "4.0.3"
+  },
+  "devDependencies": {
+    "@babel/plugin-proposal-private-property-in-object": "^7.x.x",
+    "tailwindcss": "^3.x",
+    "postcss": "^8.x", 
+    "autoprefixer": "^10.x" 
+  },
+  "scripts": {
+    "start": "react-scripts start",
+    "build": "react-scripts build",
+    "test": "react-scripts test",
+    "eject": "react-scripts eject",
+    "build:tailwind": "tailwindcss build src/styles/index.css -o src/styles/tailwind.css" 
+  },
+  "eslintConfig": {
+    "extends": ["react-app", "react-app/jest"]
+  },
+  "browserslist": {
+    "production": [">0.2%", "not dead", "not op_mini all"],
+    "development": ["last 1 chrome version", "last 1 firefox version", "last 1 safari version"]
   }
-  
+}
