--- a/frontend_service/Dockerfile
+++ b/frontend_service/Dockerfile
@@ -11,11 +11,7 @@ COPY . .
 
 RUN npm install
 RUN npm install react-router-dom@6
-# Tailwind CSS 설치
-RUN npm install -D tailwindcss@latest postcss@latest autoprefixer@latest
-
-# Tailwind CSS 초기화 (tailwind.config.js와 postcss.config.js 생성)
-RUN npx tailwindcss init -p
+RUN npm install @mui/material @emotion/react @emotion/styled
 
 
 
