--- a/frontend_service/package.json
+++ b/frontend_service/package.json
@@ -1,32 +1,26 @@
 {
-  "name": "front_service",
-  "version": "1.0.0",
-  "private": true,
   "dependencies": {
-    "axios": "^0.21.1",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
-    "react-router-dom": "^6.x", 
-    "react-scripts": "4.0.3"
+    "@emotion/react": "^11.0.0",
+    "@emotion/styled": "^11.0.0",
+    "@mui/material": "^5.0.0",
+    "@mui/icons-material": "^5.0.0",
+    "axios": "^0.24.0",
+    "react": "^18.0.0",
+    "react-dom": "^18.0.0",
+    "react-router-dom": "^6.2.1",
+    "react-scripts": "5.0.0"
   },
   "devDependencies": {
-    "@babel/plugin-proposal-private-property-in-object": "^7.x.x",
-    "tailwindcss": "^3.x",
-    "postcss": "^8.x", 
-    "autoprefixer": "^10.x" 
+    "@babel/plugin-proposal-private-property-in-object": "^7.14.5",
+    "postcss": "^8.4.5",
+    "autoprefixer": "^10.4.0"
   },
+
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject",
-    "build:tailwind": "tailwindcss build src/styles/index.css -o src/styles/tailwind.css" 
-  },
-  "eslintConfig": {
-    "extends": ["react-app", "react-app/jest"]
-  },
-  "browserslist": {
-    "production": [">0.2%", "not dead", "not op_mini all"],
-    "development": ["last 1 chrome version", "last 1 firefox version", "last 1 safari version"]
+    "eject": "react-scripts eject"
   }
+  
 }
